--- a/package.json
+++ b/package.json
@@ -2,24 +2,16 @@
   "name": "webscraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scraper.js",
   "scripts": {
     "build": "tsc --p ./tsconfig.json",
-    "start": "node ./dist/index.js",
-    "pw": "node ./dist/playwright.js"
+    "start": "node ./dist/scraper.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "playwright": "^1.17.1",
-    "puppeteer": "^13.0.0",
-    "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "random-useragent": "^0.5.0",
     "typescript": "^4.5.4"
   },
-  "devDependencies": {
-    "@playwright/test": "^1.17.1",
-    "@types/random-useragent": "^0.3.1"
-  }
+  "devDependencies": {}
 }
